# vscode-accessible-light-theme

./: .gitignore  ACCESSIBILITY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  Makefile  README.md  RELEASE_CHECKLIST.md  justfile  package.json  preview.html  pyproject.toml  recommended-settings.json  test-accessibility.md  test.py  test_theme.py  vsc-extension-quickstart.md
.github/ISSUE_TEMPLATE/: accessibility-feedback.md  bug-report.md  feature-request.md
.github/workflows/: accessibility-tests.yml
assets/docs/: ICON_DESIGN.md  SETUP_GUIDE.md  TERMINAL_ACCESSIBILITY.md
assets/preview/: preview.html
memory-bank/: accessibility-analysis.md  active-context.md  progress.md  project-summary.md
scripts/: accessibility-test.py  colorblind-simulation.py  quick-contrast-check.py
tests/: test_accessibility.py
themes/: Atom One X Github - Light Gray-color-theme.json  accessible-light-theme.json  atom-one-x-github-light-gray-color-theme.json
